<resources>
    <string name="app_name">BLE Demo</string>

    <string name="connect_lh_btn">Connect Left Hand</string>
    <string name="disconnect_lh_btn">Disconnect Left Hand</string>
    <string name="connect_rh_btn">Connect Right Hand</string>
    <string name="disconnect_rh_btn">Disconnect Right Hand</string>
    <string name="connect_ll_btn">Connect Left Leg</string>
    <string name="disconnect_ll_btn">Disconnect Left Leg</string>
    <string name="connect_rl_btn">Connect Right Leg</string>
    <string name="disconnect_rl_btn">Disconnect Right Leg</string>

    <!-- Mqtt Settings -->
    <string name="title_activity_mqtt">MQTT Settings</string>

    <string name="mqtt_server_title">Server</string>
    <string name="mqtt_server_address">Address:</string>
    <string name="mqtt_server_port">Port:</string>
    <string name="mqtt_publish_title">Publish</string>
    <string name="mqtt_publish0_topic">UART RX:</string>
    <string name="mqtt_publish1_topic">UART TX:</string>
    <string name="mqtt_subscribe_title">Subscribe</string>
    <string name="mqtt_subscribe_topic">Topic:</string>
    <string name="mqtt_subscribe_behaviour">Action:</string>
    <string name="mqtt_advanced_title">Advanced</string>
    <string name="mqtt_username">Username:</string>
    <string name="mqtt_password">Password:</string>
    <string name="mqtt_cleansession">Clean session:</string>
    <string name="mqtt_sslconnection">SSL connection:</string>


    <string name="mqtt_server_address_hint">\u003CMQTT server address\u003E</string>
    <string name="mqtt_enable">Enable</string>
    <string name="mqtt_disable">Disable</string>
    <string name="mqtt_service_status">Mqtt Service Status:</string>

    <string name="mqtt_qrconfig">Configure using AdafruitIO QR-Code</string>
    <string name="mqtt_qrconfig_action">Scan Code</string>

    <string name="mqtt_status_connected">Connected</string>
    <string name="mqtt_status_disconnected">Disconnected</string>
    <string name="mqtt_status_connecting">Connecting…</string>
    <string name="mqtt_status_disconnecting">Disconnecting…</string>
    <string name="mqtt_status_error">Error</string>

    <string-array name="mqtt_uart_subscribe_behaviour">
        <item>Local Only</item>
        <item>Transmit</item>
    </string-array>

    <!-- Mqtt Settings Code Reader -->
    <string name="title_activity_mqtt_uart_settings_code_reader">Scan QR-Code</string>
    <string name="mqttcodereader_cameraneeded">Access to the camera is needed for detection</string>
    <string name="mqttcodereader_lowstorageerror">Code detector dependencies cannot be downloaded due to low device storage. Please increase the available storage</string>
    <string name="mqttcodereader_nocamerapermission">Code detector cannot run because it does not have the camera permission</string>

    <!-- Mqtt -->
    <string name="mqtt_connection_lost">Mqtt connection to server lost</string>
    <string name="mqtt_connection_failed">Mqtt server connection failed</string>

    <string-array name="mqtt_qos">
        <item>At Most Once</item>
        <item>At Least Once</item>
        <item>Exactly Once</item>
    </string-array>

    <!-- Common -->
    <string name="dialog_notice">Notice</string>
    <string name="dialog_dontshowagain">Don\'t show again</string>
</resources>
