<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.uri.wbl.tex_tronics.MainActivity">

    <Button
        android:id="@+id/connect_lh_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:text="@string/connect_lh_btn"/>

    <Button
        android:id="@+id/disconnect_lh_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/connect_lh_btn"
        android:text="@string/disconnect_lh_btn"/>

    <Button
        android:id="@+id/connect_rh_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:enabled="false"
        android:text="@string/connect_rh_btn"/>

    <Button
        android:id="@+id/disconnect_rh_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/connect_lh_btn"
        android:layout_toEndOf="@+id/disconnect_lh_btn"
        android:enabled="false"
        android:text="@string/disconnect_rh_btn"/>

    <Button
        android:id="@+id/connect_ll_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/disconnect_lh_btn"
        android:layout_marginTop="15dp"
        android:enabled="false"
        android:text="@string/connect_ll_btn"/>

    <Button
        android:id="@+id/disconnect_ll_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/connect_ll_btn"
        android:enabled="false"
        android:text="@string/disconnect_ll_btn"/>

    <Button
        android:id="@+id/connect_rl_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/connect_ll_btn"
        android:layout_alignBottom="@+id/connect_ll_btn"
        android:layout_alignParentEnd="true"
        android:enabled="false"
        android:text="@string/connect_rl_btn"/>

    <Button
        android:id="@+id/disconnect_rl_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/connect_ll_btn"
        android:enabled="false"
        android:text="@string/disconnect_rl_btn"/>

</RelativeLayout>
